<resources>
    <string name="app_name">Yoga</string>
    <string name="yoga">Yoga</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="start_yoga_session">Start Yoga Session.</string>
    <string name="start_yoga_session_discription">Do yoga asanas with us, know benefits of yoga asanas
        and get analysis through your body posture detection.</string>
    <string name="practice_yoga_asana">Practice Yoga Asana.</string>
    <string name="practice_yoga_asana_discription">Practice yoga asanas as per your preference and
        get analysis through your body posture detection.</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">App Logo</string>
    <string name="google">Google</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="benefits">Benefits:</string>
    <string name="description">Description:</string>
    <string name="search">Search</string>
    <string name="try_pose">Try Pose</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="camera_button">Camera Button</string>
</resources>