<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_pink_135"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_lotus" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="54dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:iconTint="@color/common_google_signin_btn_tint"
                app:iconTintMode="add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skip_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/skip"
                android:textStyle="bold"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>