<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile_fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/profile"
            android:cropToPadding="true"
            tools:srcCompat="@drawable/ic_account_bold" />

        <TextView
            android:id="@+id/display_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textColor="@color/pink"
            tools:text="Hii" />

        <TextView
            android:id="@+id/email_id"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="monospace"
            tools:text="gmail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/sign_out"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:iconTint="@color/common_google_signin_btn_tint"
            app:iconTintMode="add" />
    </LinearLayout>
</FrameLayout>